# FileDrive

./: .gitignore  DEVCONTAINER_NO_DOCKER.md  LICENSE  README.md  docker-compose.yml  flake.nix  index.html  justfile  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  tsconfig.app.json  vite.config.ts
.agents/rules/: code-style-guide.md
.devcontainer/: Dockerfile  devcontainer.json
.storybook/: preview-head.html
bruno/: Health.yml  opencollection.yml
bruno/auth/: login.yml  logout.yml  refresh.yml  register.yml
bruno/environments/: Local.yml
bruno/user/: user.yml
client/: .dockerignore  .prettierignore  .prettierrc  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
client/.storybook/: preview.tsx
client/src/: App.tsx  index.css
client/src/api/: account.api.ts  auth.api.ts  client.ts  common.api.ts
client/src/hooks/: use-health.ts
nix/: default-shell.nix
server/: .dockerignore  Dockerfile  pyproject.toml
server/accounts/: authentication.py  constants.py  models.py  serializers.py  services.py  services_auth.py  services_security.py  tests.py  urls.py  views.py
server/accounts/migrations/: 0001_initial.py  0002_authsession_ip_address_authsession_user_agent.py  0003_alter_user_options_alter_authidentity_email_and_more.py
server/common/: __init__.py
server/config/: celery.py  settings.py  urls.py
server/workspaces/: models.py
server/workspaces/migrations/: 0001_initial.py  0002_alter_workspace_slug.py  0003_workspacemember.py
src/: App.tsx
src/lib/: constants.ts
(+43 files in other folders)
