[project]
name = "filedrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.14.0",
    "django-filter>=26.1",
    "django-stubs>=6.0.7",
    "djangorestframework>=3.17.1",
    "gunicorn>=26.0.0",
    "psycopg[binary,pool]>=3.3.4",
    "python-jose[cryptography]>=3.5.0",
]

