[project]
name = "filedrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "celery[redis]>=5.6.3",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.14.0",
    "django-filter>=26.1",
    "djangorestframework>=3.17.1",
    "gunicorn>=26.0.0",
    "psycopg[binary,pool]>=3.3.4",
    "python-jose[cryptography]>=3.5.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.7",
    "djangorestframework-stubs>=3.17.0",
    "debugpy>=1.8.2",
]

[tool.ruff]
line-length = 88


